# llm-benchmarks

./: .gitignore  Dockerfile  README-docker.md  README.md  docker-compose.yml  pyproject.toml  start-server.sh
contracts/: my_contract.move
gymnasuium/: main.py
gymnasuium-server/: .gitignore  README-VERCEL.md  README.md  eslint.config.mjs  next.config.mjs  package-lock.json  package.json
gymnasuium-server/app/: layout.tsx  page.tsx
gymnasuium-server/public/: base_contract_20250228_163623.move  base_contract_20250228_163921_iterations.json  defi_contract_20250228_171915.move  defi_contract_20250228_171915_iterations.json  defi_contract_20250228_171915_iterations_error_chart_dark.html  defi_contract_20250228_171915_test.move  game_contract_20250228_171153_iterations_error_chart.html  liquid_staking_contract_20250228_164520.move  liquid_staking_contract_20250228_164836_iterations_error_chart.html  liquid_staking_contract_20250228_164836_iterations_error_chart_dark.html  liquid_staking_contract_20250228_165258.move  liquid_staking_contract_20250228_165804_iterations.json  liquid_staking_contract_20250228_165804_iterations.jsonl  liquid_staking_contract_20250228_165804_iterations_error_chart_dark.html
neuromansui/: main.py  prompt_loader.py
neuromansui-server/: README-VERCEL.md  README.md  middleware.ts  package-lock.json  package.json  vercel.json
neuromansui-server/app/: layout.tsx  page.tsx
prompts/: sui_move.yaml
test_outputs/: liquid_staking_contract_20250227_105919.move
tests/: test_collect_errors.py  test_main.py
(+53 files in other folders)
