[project]
name = "gymnasuium"
version = "0.1.0"
description = ""
authors = [
    {name = "Kevin Zeidler",email = "kevin.zeidler@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
packages = [{ include = "gymnasuium", from = "." }]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
langchain = "^0.3.19"
openai = "^1.64.0"
python-dotenv = "^1.0.1"
pyyaml = "^6.0.1"
pytest = "^8.3.4"
rich = "^13.9.4"
plotly = "^5.20.0"
pandas = "^2.2.3"
dotenv = "^0.9.9"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
